# YetAnotherArchive

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test.cpp
include/: yaa.h
src/: Archive.cpp  Archive.hpp  ArchiveEditor.cpp  ArchiveEditor.hpp  ArchiveFile.cpp  ArchiveFile.hpp  Hash.cpp  Hash.hpp  Header.cpp  Header.hpp  Log.cpp  Log.hpp  Roadmap.md  api.cpp  class_defines.hpp  utils.cpp  utils.hpp  yaa.cpp
src/io/: ArchiveWriter.cpp  ArchiveWriter.hpp
